--- a/pikkoma/8-11/style.css
+++ b/pikkoma/8-11/style.css
@@ -9,6 +9,11 @@
  --color-orange: #F08627;
 }
 
+body {
+  background-image: url(./images/bakground.png);
+  background-size: 76px;
+}
+
 .header{
   width: 100%;
   padding-top:10px;
@@ -24,7 +29,8 @@
 .title{
   padding-top:75px;
   height: 100vh;
-  background: linear-gradient(to right, #FAB824, var(--color-main));
+  background-image: url(./images/bg-title.svg);
+  background-repeat: no-repeat;
 }
 
 .share{
@@ -128,7 +134,6 @@
 
 
 .about{
-  background-image: url(images/background_wave2.png);
   display:flex;
   width:100%;
   height:100vh;
@@ -139,7 +144,6 @@
   height:560px;
   margin:auto;
   border-radius: 41px;
-  background-color:rgba(255,255,255,0.85);
 }
 
 /* .white_block{
@@ -175,6 +179,8 @@
 
 .howtouse{
   height: 948px;
+  background-image: url(./images/bg-howtouse.svg);
+  background-repeat: no-repeat;
 }
 
 .download{
@@ -182,9 +188,6 @@
   display:flex;
   justify-content: center;
   align-items: center;
-  /* repeatでbackground.pngをパターン化していましたが、波にするので今は背景画像をそのまま貼り付けています */
-  background-image: url(images/background_wave4.png);
-  background-repeat: repeat;
 }
 
 .button{
