--- a/pikkoma/8-16/style.css
+++ b/pikkoma/8-16/style.css
@@ -11,6 +11,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 .menu4 {
@@ -77,16 +78,14 @@ html {
 
 #nav {
   position: fixed;
+  z-index: 999;
   top: 0;
   right: 0;
 }
 
 .menu {
-  position: fixed;
-  z-index: 9999999;
-  position: relative;
-  width: 120px;
-  height: 50px;
+  position: absolute;
+  z-index: 2;
   right: 20px;
   top: 20px;
   cursor: pointer;
@@ -97,6 +96,7 @@ html {
 .main-menu {
   position: relative;
   z-index: 1;
+  pointer-events: none;
   width: max-content;
 }
 
@@ -192,6 +192,10 @@ html {
 
 #nav.menu-active .main-menu ul {
   opacity: 1;
+}
+
+#nav.menu-active .main-menu {
+  pointer-events: auto;
 }
 
 @keyframes menu2Anime {
@@ -490,10 +494,10 @@ html {
 z-index: 9999999; */
 /* ボタンを最前面に */
 /* } */
-.menu:hover {
+/* .menu:hover {
   opacity: 0.7;
   color: white;
-}
+} */
 
 #pop-up {
   display: none; /* label でコントロールするので input は非表示に */
@@ -753,7 +757,6 @@ body {
   height: 900px;
   width: 100vw;
   position: relative;
-  z-index: -1;
 }
 
 .howbg {
